# codeact

./: .gitignore  DOCUMENTATION.md  Makefile  README.md  README_RESEARCH.md  pyproject.toml
docs/: index.md
examples/: advanced_research.py  basic_research.py  error_handling_example.py  real_llm_test.py
src/codeact/: __init__.py  cli.py  main.py  main_extended.py
src/codeact/implementations/: __init__.py  agent.py  error_handling.py  execution.py  llm.py  llm_adapter.py  llm_providers.py  parser_extended.py  research.py  research_enhanced.py  research_real.py
src/codeact/interfaces/: __init__.py  agent.py  execution.py  llm.py  research.py
tests/: conftest.py
tests/unit/: test_agent.py  test_controller_extended.py  test_llm.py  test_parser_extended.py  test_research_interface.py
